--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.0"
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.7",
+    "chai": "^4.3.6",
+    "hardhat": "^2.12.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
